style.css
body {
    margin: 0;
    padding: 0;
    background: #FFF;
    overflow-x: hidden;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

a,
button {
    transition: all .3s ease-in-out;
    outline: none!important;
}

a:hover {
    text-decoration: none;
    cursor: pointer;
}

#page-loading-blocs-notifaction {
    position: fixed;
    top: 0;
    bottom: 0;
    width: 100%;
    z-index: 100000;
    background: #FFFFFF url("img/pageload-spinner.gif") no-repeat center center;
}

.bloc {
    width: 100%;
    clear: both;
    background: 50% 50% no-repeat;
    padding: none;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    position: relative;
}

.bloc .container {
    padding-left: 0;
    padding-right: 0;
}

.bloc-lg {
    padding: 100px 50px;
}

.bloc-md {
    padding: 50px;
}

.bloc-sm {
    padding: 20px 50px;
}

.bg-center,
.bg-l-edge,
.bg-r-edge,
.bg-t-edge,
.bg-b-edge,
.bg-tl-edge,
.bg-bl-edge,
.bg-tr-edge,
.bg-br-edge,
.bg-repeat {
    -webkit-background-size: auto!important;
    -moz-background-size: auto!important;
    -o-background-size: auto!important;
    background-size: auto!important;
}

.bg-repeat {
    background: repeat;
}

.bg-t-edge {
    background: top no-repeat;
}

.bloc-bg-texture::before {
    content: "";
    background-size: 2px 2px;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    opacity: 0.3;
}

.texture-paper::before {
    background: url("img/texture-paper.png");
    background-size: 280px 280px;
}

.b-parallax {
    background-attachment: scroll;
}














/* what I've added... start */

.navbar-header {

    line-height: 80px;

}

.navbar-toggle {
    
    background-color: white;
    cursor: pointer;
   float: right;
   padding: 10px;


    
}


 header.service-header {
    display: flex;
    justify-content: center;
    height: 100%;
}


.service-header h2 {
    font-size: 1.4em;
    margin: 2%;
    text-align: center;
    
}




.col-sm-12 {
margin: 12px;
    /* FILL IN THE BLANKS, I HAVE A LOT OF CONTAINERS NAMED THIS SO SEE WHAT IT IS IF ITS USEFUL OR NO */

}

.img-responsive {
    width: 580px;
    object-fit: contain;
}



/* SAME GOES FOR */

.text-center {
   /* IT DOESN'T HAVE A CSS EQUIVALENT, BUT ITS USED MANY TIMES IN THE MARKUP... SEE IF I CAN MAKE A CENTERED-TEXT SHORTCUT, THAT'S PRETTY COOL! */
}

/* make adjustments to css for images changed into text to mimic the image look he had... */

.testimonial  {
    
    display: flex;
    text-align: center;
    flex-flow: column wrap;
    margin: 0 10%;

}

.article p {

    font-size: 35px;    
}

.testimonial h4 {


}

/* what I've added.. end */



















.d-bloc {
    color: rgba(255, 255, 255, .7);
}

.d-bloc button:hover {
    color: rgba(255, 255, 255, .9);
}

.d-bloc .icon-round,
.d-bloc .icon-square,
.d-bloc .icon-rounded,
.d-bloc .icon-semi-rounded-a,
.d-bloc .icon-semi-rounded-b {
    border-color: rgba(255, 255, 255, .9);
}

.d-bloc .divider-h span {
    border-color: rgba(255, 255, 255, .2);
}

.d-bloc .a-btn,
.d-bloc .navbar a,
.d-bloc .navbar-brand,
.d-bloc a .icon-sm,
.d-bloc a .icon-md,
.d-bloc a .icon-lg,
.d-bloc a .icon-xl,
.d-bloc h1 a,
.d-bloc h2 a,
.d-bloc h3 a,
.d-bloc h4 a,
.d-bloc h5 a,
.d-bloc h6 a,
.d-bloc p a {
    color: rgba(255, 255, 255, .6);
}

.d-bloc .a-btn:hover,
.d-bloc .navbar a:hover,
.d-bloc .navbar-brand:hover,
.d-bloc a:hover .icon-sm,
.d-bloc a:hover .icon-md,
.d-bloc a:hover .icon-lg,
.d-bloc a:hover .icon-xl,
.d-bloc h1 a:hover,
.d-bloc h2 a:hover,
.d-bloc h3 a:hover,
.d-bloc h4 a:hover,
.d-bloc h5 a:hover,
.d-bloc h6 a:hover,
.d-bloc p a:hover {
    color: rgba(255, 255, 255, 1);
}

.d-bloc .navbar-toggle .icon-bar {
    background: rgba(255, 255, 255, 1);
}

.d-bloc .btn-wire,
.d-bloc .btn-wire:hover {
    color: rgba(255, 255, 255, 1);
    border-color: rgba(255, 255, 255, 1);
}

.d-bloc .panel {
    color: rgba(0, 0, 0, .5);
}

.d-bloc .panel button:hover {
    color: rgba(0, 0, 0, .7);
}

.d-bloc .panel icon {
    border-color: rgba(0, 0, 0, .7);
}

.d-bloc .panel .divider-h span {
    border-color: rgba(0, 0, 0, .1);
}

.d-bloc .panel .a-btn {
    color: rgba(0, 0, 0, .6);
}

.d-bloc .panel .a-btn:hover {
    color: rgba(0, 0, 0, 1);
}

.d-bloc .panel .btn-wire,
.d-bloc .panel .btn-wire:hover {
    color: rgba(0, 0, 0, .7);
    border-color: rgba(0, 0, 0, .3);
}

.d-bloc .panel,
.l-bloc {
    color: rgba(0, 0, 0, .5);
}

.d-bloc .panel button:hover,
.l-bloc button:hover {
    color: rgba(0, 0, 0, .7);
}

.l-bloc .icon-round,
.l-bloc .icon-square,
.l-bloc .icon-rounded,
.l-bloc .icon-semi-rounded-a,
.l-bloc .icon-semi-rounded-b {
    border-color: rgba(0, 0, 0, .7);
}

.d-bloc .panel .divider-h span,
.l-bloc .divider-h span {
    border-color: rgba(0, 0, 0, .1);
}

.d-bloc .panel .a-btn,
.l-bloc .a-btn,
.l-bloc .navbar a,
.l-bloc .navbar-brand,
.l-bloc a .icon-sm,
.l-bloc a .icon-md,
.l-bloc a .icon-lg,
.l-bloc a .icon-xl,
.l-bloc h1 a,
.l-bloc h2 a,
.l-bloc h3 a,
.l-bloc h4 a,
.l-bloc h5 a,
.l-bloc h6 a,
.l-bloc p a {
    color: rgba(0, 0, 0, .6);
}

.d-bloc .panel .a-btn:hover,
.l-bloc .a-btn:hover,
.l-bloc .navbar a:hover,
.l-bloc .navbar-brand:hover,
.l-bloc a:hover .icon-sm,
.l-bloc a:hover .icon-md,
.l-bloc a:hover .icon-lg,
.l-bloc a:hover .icon-xl,
.l-bloc h1 a:hover,
.l-bloc h2 a:hover,
.l-bloc h3 a:hover,
.l-bloc h4 a:hover,
.l-bloc h5 a:hover,
.l-bloc h6 a:hover,
.l-bloc p a:hover {
    color: rgba(0, 0, 0, 1);
}

.l-bloc .navbar-toggle .icon-bar {
    color: rgba(0, 0, 0, .6);
}

.d-bloc .panel .btn-wire,
.d-bloc .panel .btn-wire:hover,
.l-bloc .btn-wire,
.l-bloc .btn-wire:hover {
    color: rgba(0, 0, 0, .7);
    border-color: rgba(0, 0, 0, .3);
}

.voffset {
    margin-top: 30px;
}

.voffset-lg {
    margin-top: 80px;
}

.row-no-gutters {
    margin-right: 0;
    margin-left: 0;
}
/* ... */

